--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,16 @@
+2024-09-05  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:         Bumped the version number to 2.3.1.
+	* COPYRIGHT.txt:
+	* README.txt:
+
+	* CHANGES.txt:         Updated to reflect the changes.
+	* doc/scrollutil.html:
+
+	* scripts/*.tcl: Fixed a bug in the scrollutil::getscrollarea command,
+	  introduced in the previous Scrollutil version; minor cosmetic
+	  improvements.
+
 2024-09-04  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Scrollutil 2.3.
