--- a/modules/scrollutil/CHANGES.txt
+++ b/modules/scrollutil/CHANGES.txt
@@ -1,10 +1,10 @@
 What is new in Scrollutil 2.3.1?
 --------------------------------
 
-1. Appart from a few minor cosmetic improvements, the only change in
-   this release is a fix for a bug in the scrollutil::getscrollarea
-   command, introduced in the previous Scrollutil version (thanks to
-   Nicolas Bats for his bug report).
+1. Apart from a few minor cosmetic improvements, the only change in this
+   release is a fix for a bug in the scrollutil::getscrollarea command,
+   introduced in the previous Scrollutil version (thanks to Nicolas Bats
+   for his bug report).
 
 What was new in Scrollutil 2.3?
 -------------------------------
