--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,7 @@
+2024-09-26  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Scrollutil 2.3.1.
+
 2024-09-05  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 2.3.1.
