Tcl 9 compatibility work. Mostly markings. Some indentation/formatting.
history		    Bumped to 0.3
ico, ico0	    Bumped to 1.1.3, 0.3.5
ipentry		    Bumped to 0.3.2
khim		    Bumped to 1.0.3
menubar		    Bumped to 0.5.1
ntext		    Bumped to 1.0
tachometer	    Bumped to 0.2
tkpiechart	    Bumped to 6.6.1
tooltip		    Bumped to 2.0.1
voltmeter	    Bumped to 0.2
widget		    Bumped to 3.2
widget::calendar    Bumped to 1.0.2
widget::ruler	    Bumped to 1.2
widget::screenruler Bumped to 1.3

--- a/modules/menubar/menubar.man
+++ b/modules/menubar/menubar.man
@@ -1,11 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin menubar n 0.5]
+[vset VERSION 0.5.1]
+[manpage_begin menubar n [vset VERSION]]
 [copyright {2009 Tom Krehbiel <krehbiel.tom@gmail.com> All rights reserved.}]
 [titledesc "Creates an instance of the [emph menubar] Class."]
 [moddesc   {Create and manipulate menubars}]
 [require Tcl 8.6]
 [require Tk 8.6]
-[require menubar [opt 0.5]]
+[require menubar [opt [vset VERSION]]]
 [description]
 
 [list_begin definitions]
