--- a/modules/mentry/CHANGES.txt
+++ b/modules/mentry/CHANGES.txt
@@ -1,5 +1,11 @@
-What is new in Mentry 4.3?
---------------------------
+What is new in Mentry 4.3.1?
+----------------------------
+
+1. Made sure that the Migration Tool for Tcl 9 won't output any
+   warnings or notes.
+
+What was new in Mentry 4.3?
+---------------------------
 
 1. Made sure that the handling of the <TouchpadScroll> event won't
    pollute the global namespace (thanks to Rolf Ade for drawing my
