Scrollutil: Improvements in the themepatch package.

--- a/modules/scrollutil/CHANGES.txt
+++ b/modules/scrollutil/CHANGES.txt
@@ -4,7 +4,7 @@ What is new in Scrollutil 2.3.2?
 1. Made sure that the Migration Tool for Tcl 9 won't output any
    warnings or notes.
 
-2. Optimizations in the themepatch package, especially regarding the
+2. Improvements in the themepatch package, especially regarding the
    "default" theme.
 
 3. Eliminated a potential error message caused by the handling of
