--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,15 @@
+2024-10.19  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:           Bumped the version number to 4.3.1.
+	* COPYRIGHT.txt:
+	* README.txt:
+	* doc/mentry.html:
+
+	* CHANGES.txt: Updated to reflect the changes.
+
+	* scripts/*.tcl: Made sure that the Migration Tool for Tcl 9 won't
+	  output any warnings or notes.
+
 2024-09-04  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Mentry 4.3.
