Wcb, Mentry, Tablelist, Scrollutil: Updated the file CHANGES.txt.

--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -1,8 +1,9 @@
 What is new in Tablelist 7.4?
 -----------------------------
 
-1. Made sure that the Migration Tool for Tcl 9 won't output any
-   warnings or notes.
+1. Made sure that the Migration Tool for Tcl 9 by Ashok Nadkarni won't
+   output any warnings or notes (thanks to Andreas Kupries for his
+   valuable input).
 
 2. Improvements in the themepatch package, especially regarding the
    "default" theme.
