--- a/modules/wcb/ChangeLog
+++ b/modules/wcb/ChangeLog
@@ -1,3 +1,7 @@
+2024-11-29  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Wcb 4.1.1.
+
 2024-10-19  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.1.1.
