--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,7 @@
+2024-11-29  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Mentry 4.3.1.
+
 2024-10.19  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:           Bumped the version number to 4.3.1.
