--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2024-11-29 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.4.
+
 2024-11-18 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* CHANGES.txt:              Updated to reflect the changes.
