--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -1,5 +1,12 @@
-What is new in Tablelist 7.4?
------------------------------
+What is new in Tablelist 7.4.1?
+-------------------------------
+
+1. Eliminated a negative side effect of the optimization of
+   "cellconfigure -image|text" introduced in Tablelist 7.4, related to
+   interactive cell editing (thanks to Nicolas Bats for his bug report).
+
+What was new in Tablelist 7.4?
+------------------------------
 
 1. Made sure that the Migration Tool for Tcl 9 by Ashok Nadkarni won't
    output any warnings or notes (thanks to Andreas Kupries for his
