--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,5 +1,9 @@
 2024-12-03 Csaba Nemethi <csaba.nemethi@t-online.de>
 
+	* Released Tablelist 7.4.1.
+
+2024-12-03 Csaba Nemethi <csaba.nemethi@t-online.de>
+
 	* *.tcl:              Bumped the version number to 7.4.1.
 	* COPYRIGHT.txt:
 	* README.txt:
