--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,15 @@
+2025-03-22  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:         Bumped the version number to 4.4.
+	* COPYRIGHT.txt:
+	* README.txt:
+
+	* CHANGES.txt: Updated to reflect the changes.
+	* doc/*.html:
+
+	* scripts/mwutil/*.tcl: Attributes-related extensions in the mwutil
+	  package.
+
 2024-11-29  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Mentry 4.3.1.
