--- a/modules/mentry/ChangeLog
+++ b/modules/mentry/ChangeLog
@@ -1,3 +1,7 @@
+2025-03-24  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Mentry 4.4.
+
 2025-03-22  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 4.4.
