--- a/modules/tablelist/ChangeLog
+++ b/modules/tablelist/ChangeLog
@@ -1,3 +1,7 @@
+2025-03-24 Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tablelist 7.5.
+
 2025-03-20 Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 7.5.
