--- a/modules/scrollutil/ChangeLog
+++ b/modules/scrollutil/ChangeLog
@@ -1,3 +1,7 @@
+2025-03-24  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Scrollutil 2.5.
+
 2025-03-20  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* *.tcl:         Bumped the version number to 2.5.
