--- a/modules/tsw/ChangeLog
+++ b/modules/tsw/ChangeLog
@@ -1,3 +1,7 @@
+2025-03-24  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* Released Tsw 1.0.
+
 2025-03-10  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Added tsw to tklib.
