--- a/modules/wcb/ChangeLog
+++ b/modules/wcb/ChangeLog
@@ -1,3 +1,14 @@
+2025-05-21  Csaba Nemethi <csaba.nemethi@t-online.de>
+
+	* *.tcl:         Bumped the version number to 4.2.
+	* COPYRIGHT.txt:
+	* README.txt:
+
+	* CHANGES.txt: Updated to reflect the changes.
+	* doc/*.html:
+
+	* doc/stylesheet.css: Extended the CSS stylesheet.
+
 2024-11-29  Csaba Nemethi <csaba.nemethi@t-online.de>
 
 	* Released Wcb 4.1.1.
