--- a/modules/tablelist/CHANGES.txt
+++ b/modules/tablelist/CHANGES.txt
@@ -1,29 +1,35 @@
 What is new in Tablelist 7.6?
 -----------------------------
 
-1. The implementation of the interactive cell editing with the aid of a
+1. Added the "-button2window" configuration option, which makes it
+   possible to redirect the mouse button 2 events of the tablelist's
+   body to the containing toplevel window, and is used by the
+   implementation of scanning support for scrollutil::scrollableframe
+   widgets.
+
+2. The implementation of the interactive cell editing with the aid of a
    (ttk::)menubutton now takes into acount that in Tk 9 the menu index
    "none" was replaced with the empty string.
 
-2. Eliminated a few artifacts related to the "showtargetmark" subcommand
+3. Eliminated a few artifacts related to the "showtargetmark" subcommand
    when using TkDND on Windows or macOS Aqua (thanks to Nicolas Bats for
    his bug report).
 
-3. Made sure that the "autoscrolltarget" subcommand works as expected
+4. Made sure that the "autoscrolltarget" subcommand works as expected
    (again, thanks to Nicolas Bats for reporting that on Windows and
    macOS Aqua this was not always the case).
 
-4. Made sure that in multi-line cell texts the substring "%W" won't be
+5. Made sure that in multi-line cell texts the substring "%W" won't be
    substituted by the path name of the tablelist's body (thanks to
    Harald Oehlmann for his bug report).
 
-5. Made the column deletion by orders of magnitude faster (thanks to
+6. Made the column deletion by orders of magnitude faster (thanks to
    Alexandru Dadalau for his bug report).
 
-6. Minor improvements in the demo scripts related to interactive cell
+7. Minor improvements in the demo scripts related to interactive cell
    editing.
 
-7. Improved the documentation by extending the CSS stylesheet used in
+8. Improved the documentation by extending the CSS stylesheet used in
    the HTML files.
 
 What was new in Tablelist 7.5?
